Envio de correos
Se ha añadido la funcionalidad de enviar correos al alumno de notificación. Estos serán para los mensajes y los recibos. Las plantillas se encuentran en el propio backend.

Además, se ha añadido la búsqueda por id de grupo.

--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,20 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.15.3</version>
 		</dependency>
-    </dependencies>
+
+		<!-- mailSender -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<!-- template rendering -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
