--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Config jwt
 jwt.secret=claveSeguraParaSadhanaDeYoga1234
 jwt.expiration=3600000
+
+#Config email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=infosadhanadeyoga@gmail.com
+spring.mail.password=rqjphwryxgpnyjua
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
